# logging

./: .gitignore  LICENSE  README.md  display_logsdb.py  main.py  models  pyproject.toml  schema.py  settings.yaml
iwpod_net/: detector.py
iwpod_net/src/: keras_utils.py
logtrucks/: gdrive_client.py  main.py  schema.py  settings.yaml  utils.py
logtrucks/iwpod_net/: detector.py
logtrucks/iwpod_net/src/: keras_utils.py
logtrucks/models/: common.py  yolo.py
logtrucks/ocr/: license_plate_ocr.py  model.py
logtrucks/yolo/: detect.py
logtrucks/yolo/utils/: autoanchor.py  datasets.py  general.py  loss.py  plots.py
models/: common.py  experimental.py  yolo.py
ocr/: dataset.py  license_plate_ocr.py  model.py
ocr/weights/: best_acc_300k_90percent.yaml
src/logtrucks/: gdrive_client.py  main.py  schema.py  settings.yaml  utils.py
src/logtrucks/iwpod_net/: detector.py
src/logtrucks/iwpod_net/src/: keras_utils.py  projection_utils.py  utils.py
src/logtrucks/models/: common.py  yolo.py
src/logtrucks/ocr/: license_plate_ocr.py  model.py  utils.py
src/logtrucks/yolo/: detect.py
src/logtrucks/yolo/utils/: autoanchor.py  datasets.py  general.py  loss.py  plots.py
tests/: test_gdrive_client.py  test_iwpod_net.py  test_logic.py  test_main.py  test_ocr.py  test_settings.yaml  test_utils.py  test_yolo_detector.py
yolo/: detect.py
yolo/utils/: autoanchor.py  datasets.py  loss.py  plots.py  torch_utils.py
