[tool.poetry]
name = "logtrucks"
version = "0.1.0"
description = "Detecting logs on trucks and reading their license plate from media files"
license = "MIT"
authors = ["Bogdan Despotov <despotov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pyyaml = "^6.0"
pillow = "^9.4.0"
opencv-python = "3.4.11.43"
tensorflow = "2.2"
protobuf = "3.20"
numpy = "1.20.3"
sqlalchemy = "1.4.41"
google-api-python-client = "^2.74.0"
tqdm = "^4.64.1"
streamlit = "1.5.0"
click = "8.0.4"
torch = "1.12.1"
torchvision = "0.13.1"
matplotlib = "3.6.0"
seaborn = "0.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
logs = "logtrucks.main:cli"